--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babylonjs/core": "^5.52.0",
+    "@babylonjs/gui": "^5.52.0",
+    "@babylonjs/inspector": "^5.52.0",
     "vue": "^3.2.47"
   },
   "devDependencies": {
